images overflow bug

--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ hr {
   #welcome-image,
   #mission-image {
     display: block;
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     flex-basis: 80%;
     padding: 16px;
